--- a/styles.css
+++ b/styles.css
@@ -2,39 +2,207 @@ body {
     font-family: 'Arial', sans-serif;
     margin: 0;
     padding: 0;
-}
-
-header {
-    background-color: #333;
+    position: relative;
+    background-color: #000000;
+    background-image: url(D:/Personal/CodingProjects/contourimage.jpg);
+    background-image: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    animation: starsMovement 50s linear infinite;
     color: #fff;
-    text-align: center;
-    padding: 1em 0;
 }
 
-nav ul {
-    list-style-type: none;
-    margin: 0;
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+}
+
+ 
+.box {
+    display: none;
+    /* Add styling for the boxes as needed */
+}
+@keyframes starsMovement {
+    from {
+        background-position: 0 0;
+    }
+    to {
+        background-position: 100% 100%;
+    }
+}
+
+
+@keyframes twirl {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes fadeInDelay {
+    0% {
+        opacity: 0;
+        transform: translateX(-20px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+.container {
+    display: flex;
+    height: 95vh; /* Adjust the height as needed */
+}
+
+.left-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 1300px; /* Takes up 1/3 of the container */
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.7);
+    box-sizing: content-box;
+}
+
+.left-container img {
+    width: 400px;
+    height: 300px;
+    margin-bottom: 20px;
+    margin-top: 20px;
+}
+.image-border{
+    border: 2px solid white;
+}
+.left-container h2 {
+        margin: 0;
+
+        font-size: 30px;
+
+}
+.left-container p {
+    margin: 20px;
+}
+.left-container p2 {
+    font-size: 18px;
+    margin-top: 70px;
+    margin-left: 70px;
+    margin-right: 70px;
+}
+.left-container p3{
+    position: relative;
+    font-size: 18px;
+    margin-top: 30px;
+    margin-left: 70px;
+    margin-right: 80px;
+}
+
+.social-menu {
+    position: absolute;
+    bottom: 46%;
+    left: 20%;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+
+.menu-icon,
+.expanded-icons i {
+    font-size: 24px;
+    color: #ffffff;
+}
+
+.expanded-icons {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    padding: 10px;
+    z-index: 1;
+    opacity: 0;
+    left: 20px
+}
+
+.social-menu:hover .menu-icon {
+    animation: twirl 1s ease-in-out;
+}
+.social-menu:hover .expanded-icons {
+    animation: twirl 1s ease-in-out, fadeInDelay 1s ease-out forwards;
+    opacity: 1;
+    transform: scaleX(1) translateX(0);
+}
+
+.expanded-icons i {
+    margin: 0 10px;
+    animation: fadeInDelay 0.5s ease-out forwards;
+}
+
+.expanded-icons i:nth-child(2) {
+    animation-delay: 0.1s;
+}
+
+.expanded-icons i:nth-child(3) {
+    animation-delay: 0.2s;
+}
+
+.nav-menu {
+    list-style: none;
+    display: flex;
+    justify-content: center;
     padding: 0;
 }
 
-nav ul li {
-    display: inline;
+.nav-item {
+    cursor: pointer;
     margin-right: 20px;
+    font-size: 16px;
+    position: relative; /* Add relative positioning for pseudo-element */
 }
 
-nav a {
-    text-decoration: none;
-    color: #fff;
+/* Add styles for underlined effect on hover */
+.nav-item::before {
+    content: '';
+    position: absolute;
+    width: 0;
+    height: 2px;
+    background-color: #fff; /* Set the underline color */
+    bottom: 0;
+    left: 0;
+    transition: width 0.8s ease-in-out; /* Add transition for width */
+}
+
+.nav-item:hover::before {
+    width: 100%; /* Expand the width on hover */
+}
+
+
+.intel-Text {
+    text-decoration: underline;
+    font-size: 20px;
     font-weight: bold;
+    color: #e9830e;
+}
+.skill-Text{
+    text-decoration: underline;
+    font-size: 20px;
+    font-weight: bold;
+    color: #9b49ca;
+}
+.right-container {
+    flex: 1800px; 
+    padding: 20px;
+    border: 2px solid red;
+    box-sizing: content-box;
+    
+}
+.main-content{
+    padding: 20px;
+    box-sizing: content-box;
 }
 
-section {
-    padding: 50px;
-}
 
-footer {
-    background-color: #333;
-    color: #fff;
-    text-align: center;
-    padding: 1em 0;
-}
