--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     position: relative;
     background-color: #000000;
-    background-image: url(https://github.com/jgorman4/Portfolio/blob/master/contourimage.jpg);
+    background-image: url(https://github.com/jgorman4/Portfolio/blob/master/contourimage.jpg?raw=true);
     background-image: no-repeat;
     background-size: cover;
     background-position: center center;
