--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     font-family: 'Arial', sans-serif;
+    font-size: 16px;
     margin: 0;
     padding: 0;
     position: relative;
@@ -21,11 +22,28 @@ main {
     height: 100vh;
 }
 
- 
-.box {
+.box{
     display: none;
     /* Add styling for the boxes as needed */
 }
+
+
+.wipe-in {
+    animation: wipeIn 1s ease-in-out;
+}
+
+@keyframes wipeIn{
+    0% {
+        opacity: 0;
+        transform: translateX(-20px);
+
+    }
+    100% {
+        opacity: 1;
+        transform: translateX(0px);
+    }
+}
+
 @keyframes starsMovement {
     from {
         background-position: 0 0;
@@ -34,7 +52,6 @@ main {
         background-position: 100% 100%;
     }
 }
-
 
 @keyframes twirl {
     0% {
@@ -48,13 +65,14 @@ main {
 @keyframes fadeInDelay {
     0% {
         opacity: 0;
-        transform: translateX(-20px);
+        transform: translateY(-20px);
     }
     100% {
         opacity: 1;
-        transform: translateX(0);
+        transform: translateY(0);
     }
 }
+
 
 .container {
     display: flex;
@@ -65,48 +83,57 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 1300px; /* Takes up 1/3 of the container */
+    width: 100%;
     padding: 20px;
     background-color: rgba(0, 0, 0, 0.7);
     box-sizing: content-box;
+    margin-left: 20px;
+    overflow: auto;
+    backdrop-filter: blur(3px);
+    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.7);
 }
 
 .left-container img {
-    width: 400px;
-    height: 300px;
-    margin-bottom: 20px;
-    margin-top: 20px;
+   max-width: 60%;
+   height: auto;
 }
 .image-border{
     border: 2px solid white;
 }
 .left-container h2 {
-        margin: 0;
-
-        font-size: 30px;
+    margin-top: 10;
+    font-size: 2vw;
+    display: flex;
 
 }
 .left-container p {
-    margin: 20px;
+    display: flex;
 }
 .left-container p2 {
-    font-size: 18px;
-    margin-top: 70px;
-    margin-left: 70px;
-    margin-right: 70px;
+    font-size: 1vw;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 .left-container p3{
     position: relative;
-    font-size: 18px;
-    margin-top: 30px;
-    margin-left: 70px;
-    margin-right: 80px;
+    font-size: 1vw;
+    margin-top: 20px;
+    margin-left: 20px;
+    scrollbar-width: thin;
+    flex: 2 2 8rem;   
 }
 
+@media only screen and (max-width: 720px) {
+    /* Adjust font sizes or other styles for smaller screens */
+    .left-container p2, 
+    .left-container p3 {
+        font-size: 0.5vw; /* Adjust as needed */
+    }
+}
+
+
 .social-menu {
-    position: absolute;
-    bottom: 46%;
-    left: 20%;
+    position: relative;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -114,7 +141,7 @@ main {
 
 .menu-icon,
 .expanded-icons i {
-    font-size: 24px;
+    font-size: 1.3vw;
     color: #ffffff;
 }
 
@@ -160,7 +187,7 @@ main {
 .nav-item {
     cursor: pointer;
     margin-right: 20px;
-    font-size: 16px;
+    font-size: 1vw;
     position: relative; /* Add relative positioning for pseudo-element */
 }
 
@@ -176,6 +203,15 @@ main {
     transition: width 0.8s ease-in-out; /* Add transition for width */
 }
 
+.nav-item.selected::before {
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    bottom: 0;
+    left: 0;
+}
 .nav-item:hover::before {
     width: 100%; /* Expand the width on hover */
 }
@@ -183,26 +219,131 @@ main {
 
 .intel-Text {
     text-decoration: underline;
-    font-size: 20px;
+    font-size: 1.2vw;
     font-weight: bold;
     color: #e9830e;
 }
 .skill-Text{
     text-decoration: underline;
-    font-size: 20px;
+    font-size: 1.2vw;
     font-weight: bold;
     color: #9b49ca;
 }
 .right-container {
-    flex: 1800px; 
-    padding: 20px;
-    border: 2px solid red;
+    display: flex;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.7); 
+    min-width: 60%;
+    max-height: 100%;
+    margin-right: 20px;
+    margin-left: 20px;
     box-sizing: content-box;
+    backdrop-filter: blur(3px);
+    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.7);
+}
+
+#education_box h3 {
+    text-align: center;
+    margin-bottom: 50px;
+    font-size: 2em;
+}
+
+#AngeloState {
+    display: flex;
+}
+#AngeloStateTxt {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-left: 60px;
+    margin-top: 35px;
+    font-size: 1.2em;
+}
+#AngeloState img {
+    width: auto;
+    max-width: 100%;
+    max-height: auto;
+    margin-left: 100px; /* Align the image to the left */
+}
+ #AngeloState p {
+    flex-direction: flex;
+    margin-top: 50px;
+    margin-left: 100px;
+    font-size: 1.4em;
+    font-style: italic;
+ }
+
+
+
+
+ #ClemsonUni {
+    display: flex;
+}
+
+#ClemsonUni img {
+    max-width: 25%;
+    height: auto;
+    margin-left: 50px; /* Align the image to the left */
+    margin-top: 150px;
+}
+ #ClemsonUni p {
+    flex-direction: flex;
+    margin-top: 200px;
+    margin-left: 30px;
+    font-size: 1.4em;
+    font-style: italic;
+ }
+ #ClemsonUniTxt {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: right;
+    margin-left: 150px;
+    margin-top: 200px;
+    font-size: 1.2em;;
+ }
+
+ #NWMSU {
+    display: flex;
+}
+
+#NWMSU img {
+    max-width: 10%;
+    height: auto;
+    margin-left: 80px; /* Align the image to the left */
+    margin-top: 150px;
     
 }
+
+ #NWMSU p {
+    flex-direction: flex;
+    margin-top: 200px;
+    margin-left: 150px;
+    font-size: 1.4em;
+    font-style: italic;
+ }
+ #nwmsuTxt {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: right;
+    margin-left: 30px;
+    margin-top: 200px;
+    font-size: 1.2em;
+    margin-right: 30px;
+ }
+
 .main-content{
     padding: 20px;
     box-sizing: content-box;
+}
+.wrap-trigger {
+    word-wrap: break-word;
+}
+
+/* For WebKit browsers (Chrome, Safari) */
+.left-container::-webkit-scrollbar {
+    width: 10px; /* Set the width of the scrollbar */
 }
 
 
