--- a/styles.css
+++ b/styles.css
@@ -110,15 +110,19 @@ main {
     display: flex;
 }
 .left-container p2 {
-    font-size: 1vw;
-    margin-left: 20px;
-    margin-right: 20px;
-}
-.left-container p3{
     position: relative;
     font-size: 1vw;
-    margin-top: 20px;
-    margin-left: 20px;
+    padding-top: 3%;
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-bottom: 3%;
+}
+.left-container p3{
+    padding-left: 3%;
+    padding-right: 3%;
+    padding-bottom: 1%;
+    position: relative;
+    font-size: 1vw;
     scrollbar-width: thin;
     flex: 2 2 8rem;   
 }
@@ -242,96 +246,103 @@ main {
     box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.7);
 }
 
+/* For WebKit browsers (Chrome, Safari) */
+#education_box::-webkit-scrollbar {
+    width: 10px; /* Set the width of the scrollbar */
+}
+#education_box {
+    overflow: auto;
+    scrollbar-width: none;
+}
+
 #education_box h3 {
     text-align: center;
     margin-bottom: 50px;
-    font-size: 2em;
+    font-size: 2vw;
     text-decoration: underline;
+    flex-direction: column;
 }
 
 #AngeloState {
     display: flex;
+    padding: 2%;
 }
+
 #AngeloStateTxt {
     display: flex;
     flex-direction: column;
     text-align: center;
-    margin-left: 60px;
-    margin-top: 35px;
-    font-size: 1.2em;
+    padding-left: 10%;
+    font-size: 1vw;
 }
+
 #AngeloState img {
-    width: auto;
-    max-width: 100%;
-    max-height: auto;
-    margin-left: 100px; /* Align the image to the left */
+   max-width: 25%;
+   height: auto;
+   padding-left: 10%;
+   
 }
  #AngeloState p {
     flex-direction: flex;
-    margin-top: 50px;
-    margin-left: 100px;
-    font-size: 1.4em;
+    padding-left: 12%;
+    font-size: 1.4vw;
     font-style: italic;
  }
-
-
 
 
  #ClemsonUni {
     display: flex;
+    padding: 2%;
 }
+
 
 #ClemsonUni img {
     max-width: 25%;
     height: auto;
-    margin-left: 50px; /* Align the image to the left */
-    margin-top: 150px;
+    padding-left: 4%; /* Align the image to the left */
 }
  #ClemsonUni p {
     flex-direction: flex;
-    margin-top: 200px;
-    margin-left: 30px;
-    font-size: 1.4em;
+    padding-left: 12%;
+    font-size: 1.4vw;
     font-style: italic;
  }
  #ClemsonUniTxt {
+    padding-top: 3%;
     display: flex;
     flex-direction: column;
     text-align: center;
     align-items: right;
-    margin-left: 150px;
-    margin-top: 200px;
-    font-size: 1.2em;;
+    padding-left: 10%;
+    font-size: 1vw;
  }
 
  #NWMSU {
     display: flex;
+    padding: 2%
 }
 
 #NWMSU img {
-    max-width: 10%;
+    width: 10%;
     height: auto;
-    margin-left: 80px; /* Align the image to the left */
-    margin-top: 150px;
+    padding-left: 12%; /* Align the image to the left */
     
 }
 
  #NWMSU p {
     flex-direction: flex;
-    margin-top: 200px;
-    margin-left: 150px;
-    font-size: 1.4em;
+    padding-left: 15%;
+    font-size: 1.4vw;
     font-style: italic;
  }
  #nwmsuTxt {
+    padding-top: 3%;
     display: flex;
     flex-direction: column;
     text-align: center;
     align-items: right;
-    margin-left: 30px;
-    margin-top: 200px;
-    font-size: 1.2em;
-    margin-right: 30px;
+    padding-left: 10%;
+    font-size: 1vw;
  }
 
 .main-content{
@@ -348,10 +359,18 @@ main {
 }
 
 
+#experience_box {
+    scrollbar-width: none;
+    overflow: auto;
+    padding-left: 10%;
+    padding-right: 5%;
+    text-rendering: auto;
+}
+
 #experience_box h4 {
     text-align: center;
     margin-bottom: 50px;
-    font-size: 2em;
+    font-size: 2vw;
     text-decoration: underline;
 }
 
@@ -364,7 +383,7 @@ main {
 }
 
 #TFS h1 {
-    font-size: 1.2em;
+    font-size: 1.2vw;
 }
 
 #TFS p1{
@@ -391,7 +410,7 @@ main {
 }
 
 #NRCS h1 {
-    font-size: 1.2em;
+    font-size: 1.2vw;
 }
 
 #NRCS p1{
@@ -418,7 +437,7 @@ main {
 }
 
 #Army h1 {
-    font-size: 1.2em;
+    font-size: 1.2vw;
 }
 
 #Army p1{
