--- a/styles.css
+++ b/styles.css
@@ -287,7 +287,7 @@ main {
 }
  #AngeloState p {
     flex-direction: flex;
-    padding-left: 12%;
+    padding-left: 17%;
     font-size: 1.4vw;
     font-style: italic;
  }
@@ -472,3 +472,38 @@ main {
     font-size: 0.8vw;
     padding-bottom: 1%; /* Adjust spacing between list items */
 }
+
+/*------------------------------Portfolio---------------------------------------------*/
+
+#portfolio_box h1 {
+    text-decoration: underline;
+}
+#portfolio_box {
+    flex-direction: column;
+    text-align: center;
+    overflow: auto;
+    scrollbar-width: none;
+}
+
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+.portfolio-item {
+    flex: 0 1 calc(30% - 1%);
+    box-sizing: border-box;
+    text-align: center;
+    padding-top: 5%;
+}
+
+.portfolio-item img {
+    max-width: 50%;
+    height: auto;
+    border: 0.2vw solid white;
+}
+
+
