--- a/Portfolio/styles.css
+++ b/Portfolio/styles.css
@@ -5,7 +5,7 @@ body {
     padding: 0;
     position: relative;
     background-color: #000000;
-    background-image: url("contourimage_Background.jpg");
+    background-image: url("Portfolio/contourimage_Background.jpg");
     background-image: no-repeat;
     background-size: cover;
     background-position: center center;
